 - UCDetector actions are now available for Working Sets
 - New extension point 'org.ucdetector.reports' to create custom report using xslt or java

Bugfixes:
 - Fixed broken filter '@SuppressWarnings("ucd") = false'
 - Fixed NPE, when a compilation unit has no primary type
 - Search class names in text file now works also for nested classes: com.example.Foo$NestedClass


Todo:
 - Fix broken text search for member classes (org.ucdetector.UCDetectorConsole.UCDetectorConsoleFactory)
 - [ 3200043 ] Bad marker "test only" for classes used in xml file
 - [ 3191417 ] Change to "protected" should be default

// -----------------------------------------------------------------------------
UCDetector 1.7.0 from 2011-02-04 - eclipse 3.5, 3.6, 3.7:
New features:
 - [ 3049290 ] Set target platform in headless mode
 - Headless: Iterate over projects or resources. Use option file
 - Better html report: Show icons, javadoc author, configure report file name
 - Smaller xml report
 - New "Delete file QuickFix" for unused classes
 - New option "Filter classes with main method" default "false"

Bugfixes:
 - QuickFix was broken, when there are several classes in one java file
 - UCDetector is fit for eclipse 3.7
 - Visibility detection was broken for mode "classes only"
 - [ 3124968 ] No private marker for enum methods/fields

// -----------------------------------------------------------------------------
UCDetector 1.6.0 from 2010-08-17:
Bugfixes:
 - fixed missing QuickFix icons
 - [ 3025571 ] Exception loading modes: Malformed \uxxxx encoding
 - [ 3046637 ] Headless fails to recognize projects
 - Cancel broken in active mode, buttons: "Rename..." and "New..."

New features:
 - [ 2810803 ] Added again: Combobox to change all visibility combos
 - [ 3014516 ] Search class name in file: Full AND simple
 - New button: Rename mode
 - New option: Log to Eclipse Console View

// -----------------------------------------------------------------------------
UCDetector 1.5.0 from 2010-06-10: